--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ cache:
 
 env:
     - PLATFORMIO_CI_SRC=examples/simple-read/simple-read.ino
+    - PLATFORMIO_CI_SRC=examples/multiple-read/multiple-read.ino
 
 install:
     - pip install -U platformio
