--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
+lib_extra_dirs = ..\libraries
 
-[env:esp01_1m]
-platform = espressif8266
-board = esp01_1m
-framework = arduino
+;[env:lolin32]
+;platform = espressif32
+;board = lolin32
+;framework = arduino
