:green_heart: Fix CI
- examples use hardwareserial
- removed ESP32 testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ install:
     - pip install -U platformio
 
 script:
-    - platformio ci --board=d1_mini --board=lolin32 --lib="."
+    - platformio ci --board=d1_mini --lib="."
