Add preliminary COUNT support
- COUNTL DP support, first try
- Remove Blinker class entirely
- Renamed Datapoint::transformValue() to just transform()

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,8 @@ lib_extra_dirs = ..\libraries
 ;platform = espressif32
 ;board = lolin32
 ;framework = arduino
+
+[env:lolin32]
+platform = espressif32
+board = lolin32
+framework = arduino
