:green_heart: Define Serial1 for ESP32
- added Serial1 for ESP32 boards

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=VitoWifi
-version=0.9.0
+version=0.9.1
 author=Bert Melis
 maintainer=Bert Melis
-sentence=Communicate with Viessmann boilers using the optolink for ESP8266
+sentence=Communicate with Viessmann boilers using the optolink for ESP8266 and ESP32
 paragraph=
 category=Communication
 url=https://github.com/bertmelis/VitoWifi
-architectures=esp8266
+architectures=esp8266,esp32
