--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
 env:
     - PLATFORMIO_CI_SRC=examples/globalCallback/globalCallback.ino
     - PLATFORMIO_CI_SRC=examples/globalCallback-esp32/globalCallback-esp32.ino PLATFORMIO_CI_EXTRA_ARGS="--board=lolin32"
-    - PLATFORMIO_CI_SRC=examples/globalCallback-SWserial/globalCallback-SWserial.ino PLATFORMIO_CI_EXTRA_ARGS="--lib="/tmp/espsoftwareserial-master" --board=d1_mini"
+    - PLATFORMIO_CI_SRC=examples/globalCallback-SWserial/globalCallback-SWserial.ino PLATFORMIO_CI_EXTRA_ARGS="--lib=\"/tmp/espsoftwareserial-master\" --board=d1_mini"
     - PLATFORMIO_CI_SRC=examples/specificCallback/specificCallback.ino
     - PLATFORMIO_CI_SRC=examples/readDatapoint/readDatapoint.ino
     - PLATFORMIO_CI_SRC=examples/setupMethods/setupMethods.ino
