:memo: Update docs

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,11 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:d1_mini]
-platform = espressif8266
+platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
 board = d1_mini
 framework = arduino
 
 [env:lolin32]
-platform = espressif32
+platform = https://github.com/platformio/platform-espressif32.git#feature/stage
 board = lolin32
 framework = arduino
