--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,17 @@ cache:
         - "~/.platformio"
 
 env:
-    - PLATFORMIO_CI_SRC=examples/globalCallback/globalCallback.ino
-    - PLATFORMIO_CI_SRC=examples/globalCallback-esp32/globalCallback-esp32.ino PLATFORMIO_CI_ALT_BOARD="--board=lolin32"
-#    - PLATFORMIO_CI_SRC=examples/globalCallback-SWserial/globalCallback-SWserial.ino
-    - PLATFORMIO_CI_SRC=examples/specificCallback/specificCallback.ino
-    - PLATFORMIO_CI_SRC=examples/readDatapoint/readDatapoint.ino
-    - PLATFORMIO_CI_SRC=examples/setupMethods/setupMethods.ino
-    - PLATFORMIO_CI_SRC=examples/rawOptolink/rawOptolink.ino
+    - PLATFORMIO_CI_SRC=examples/globalCallback/globalCallback.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - PLATFORMIO_CI_SRC=examples/globalCallback-esp32/globalCallback-esp32.ino PLATFORMIO_CI_EXTRA_ARGS="--board=lolin32"
+    - PLATFORMIO_CI_SRC=examples/specificCallback/specificCallback.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - PLATFORMIO_CI_SRC=examples/readDatapoint/readDatapoint.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - PLATFORMIO_CI_SRC=examples/setupMethods/setupMethods.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - PLATFORMIO_CI_SRC=examples/rawOptolink/rawOptolink.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - CPPLINT=true
 
 install:
     - pip install -U platformio
-#    - wget https://github.com/bertmelis/espsoftwareserial/archive/master.zip -O /tmp/espsoftwareserial-master.zip
-#    - unzip /tmp/espsoftwareserial-master.zip -d /tmp/
+    - pip install -U cpplint
 
 script:
-    - if [[ $PLATFORMIO_CI_ALT_BOARD ]]; then bash -c 'platformio ci --lib="." $PLATFORMIO_CI_ALT_BOARD'; else bash -c 'platformio ci --lib="." --board=d1_mini'; fi
+    - if [[ "$CPPLINT" ]]; then make cpplint; else platformio ci $PLATFORMIO_CI_EXTRA_ARGS; fi
