--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,17 @@ cache:
         - "~/.platformio"
 
 env:
-    - PLATFORMIO_CI_SRC=examples/simple-read/simple-read.ino
-    - PLATFORMIO_CI_SRC=examples/multiple-read/multiple-read.ino
+    - PLATFORMIO_CI_SRC=examples/globalCallback/globalCallback.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - PLATFORMIO_CI_SRC=examples/globalCallback-esp32/globalCallback-esp32.ino PLATFORMIO_CI_EXTRA_ARGS="--board=lolin32"
+    - PLATFORMIO_CI_SRC=examples/specificCallback/specificCallback.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - PLATFORMIO_CI_SRC=examples/readDatapoint/readDatapoint.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - PLATFORMIO_CI_SRC=examples/setupMethods/setupMethods.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - PLATFORMIO_CI_SRC=examples/rawOptolink/rawOptolink.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+    - CPPLINT=true
 
 install:
     - pip install -U platformio
+    - pip install -U cpplint
 
 script:
-    - platformio ci --board=d1_mini --board=esp01_1m --board=esp01 --lib="./src"
+    - if [[ "$CPPLINT" ]]; then make cpplint; else platformio ci --lib="." $PLATFORMIO_CI_EXTRA_ARGS; fi
