Expand Makefile in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ install:
     - pip install -U cpplint
 
 script:
-    - if [[ "$CPPLINT" ]]; then make cpplint; else platformio ci --lib="." $PLATFORMIO_CI_EXTRA_ARGS; fi
+    - if [[ "$CPPLINT" ]]; then cpplint --repository=. --recursive --linelength=200 --filter=-build/include  ./src; else platformio ci --lib="." $PLATFORMIO_CI_EXTRA_ARGS; fi
