--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=VitoWifi
+name=VitoWiFi
 version=0.10.3
 author=Bert Melis
 maintainer=Bert Melis
 sentence=Communicate with Viessmann boilers using the optolink for ESP8266 and ESP32
 paragraph=
 category=Communication
-url=https://github.com/bertmelis/VitoWifi
+url=https://github.com/bertmelis/VitoWiFi
 architectures=esp8266,esp32
