--- a/.travis.yml
+++ b/.travis.yml
@@ -2,30 +2,34 @@ language: python
 python:
     - "2.7"
 
-# Cache PlatformIO packages using Travis CI container-based infrastructure
-sudo: false
+sudo: required
 cache:
     directories:
         - "~/.platformio"
 
 env:
+    - CPPLINT=true
+    - TESTQUEUE=true
     - PLATFORMIO_CI_SRC=examples/basic/basic.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
     - PLATFORMIO_CI_SRC=examples/basic-esp32/basic-esp32.ino PLATFORMIO_CI_EXTRA_ARGS="--board=lolin32"
     - PLATFORMIO_CI_SRC=examples/datapoints/datapoints.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
     - PLATFORMIO_CI_SRC=examples/rawOptolink/rawOptolink.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
     - PLATFORMIO_CI_SRC=examples/readDatapoint/readDatapoint.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
     - PLATFORMIO_CI_SRC=examples/Blynk/Blynk.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
-    - CPPLINT=true
 
 install:
     - pip install -U platformio
-    - platformio lib install 415
+    - platformio update
+    - platformio lib -g install 416 # Blynk
     - pip install -U cpplint
 
 script:
-    - if [[ "$CPPLINT" ]]; then cpplint --repository=. --recursive --linelength=200 --filter=-build/include  ./src; else platformio ci --lib="." $PLATFORMIO_CI_EXTRA_ARGS; fi
+    - bash scripts/travis.sh
+#    - if [[ "$CPPLINT" ]]; then cpplint --repository=. --recursive --linelength=200 --filter=-build/include  ./src; fi
+#    - if [[ "$TESTQUEUE" ]]; then platformio ci --lib="." --project-conf=tests/platformio.ini --build-dir=build --keep-build-dir tests/queue.cpp; fi
+#    - if [[ "PLATFORMIO_CI_SRC" ]]; then platformio ci --lib="." $PLATFORMIO_CI_EXTRA_ARGS; fi
 
 notifications:
   email:
     on_success: change
-    on_failure: change
+    on_failure: always
