--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ env:
     - CPPLINT=true
     - TESTQUEUE=true
     - PLATFORMIO_CI_SRC=examples/basic/basic.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
-    - PLATFORMIO_CI_SRC=examples/basic-esp32/basic-esp32.ino PLATFORMIO_CI_EXTRA_ARGS="--board=lolin32"
-    - PLATFORMIO_CI_SRC=examples/datapoints/datapoints.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
-    - PLATFORMIO_CI_SRC=examples/rawOptolink/rawOptolink.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
-    - PLATFORMIO_CI_SRC=examples/readDatapoint/readDatapoint.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
-    - PLATFORMIO_CI_SRC=examples/Blynk/Blynk.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+#    - PLATFORMIO_CI_SRC=examples/basic-esp32/basic-esp32.ino PLATFORMIO_CI_EXTRA_ARGS="--board=lolin32"
+#    - PLATFORMIO_CI_SRC=examples/datapoints/datapoints.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+#    - PLATFORMIO_CI_SRC=examples/rawOptolink/rawOptolink.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+#    - PLATFORMIO_CI_SRC=examples/readDatapoint/readDatapoint.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
+#    - PLATFORMIO_CI_SRC=examples/Blynk/Blynk.ino PLATFORMIO_CI_EXTRA_ARGS="--board=d1_mini"
 
 install:
     - pip install -U platformio
