use assert in test

--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -16,6 +16,14 @@ languages:
       - /examples/.*
       - /scripts/.*
       - /tests/.*
+    include:
+      - /src/.*
   test:
     include:
+      - /tests/.*
+    exclude:
+      - /.github/.*
+      - /docs/.*
+      - /examples/.*
+      - /scripts/.*
       - /tests/.*
