--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 .pioenvs
 .piolibdeps
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/extensions.json
-.vscode/settings.json
-lib/readme.txt
+.vscode
