--- a/scripts/platformio.ini
+++ b/scripts/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:test_queue]
+[env:catch2]
 platform = native
 build_flags =
   -DVITOWIFI_TEST=1
