--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -4,6 +4,7 @@ languages:
   production:
     exclude:
       - /tests/.*
+      - /tests/Includes/catch.hpp
   test:
     include:
       - /tests/.*
