--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -1,20 +1,9 @@
+component_depth: 2
 languages:
 - name: cpp
   production:
     exclude:
-      - /.github/.*
-      - /docs/.*
-      - /examples/.*
-      - /scripts/.*
       - /tests/.*
-    include:
-      - /src/.*
   test:
     include:
-      - /tests/.*
-    exclude:
-      - /.github/.*
-      - /docs/.*
-      - /examples/.*
-      - /scripts/.*
       - /tests/.*
