--- a/.github/workflows/build_platformio.yml
+++ b/.github/workflows/build_platformio.yml
@@ -62,3 +62,28 @@ jobs:
         run: pio ci --lib="." --board=lolin32
         env:
           PLATFORMIO_CI_SRC: ${{ matrix.example }}
+
+  build-for-linux:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        example: [
+          examples/linux/main.cpp
+        ]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pip
+            ~/.platformio/.cache
+          key: ${{ runner.os }}-pio
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+      - name: Install PlatformIO Core
+        run: pip install --upgrade platformio
+      - name: Build PlatformIO examples
+        run: pio ci --lib="." --project-conf="./examples/linux/platformio.ini"
+        env:
+          PLATFORMIO_CI_SRC: ${{ matrix.example }}
