--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-.pioenvs
-.piolibdeps
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/extensions.json
-.vscode/settings.json
-buildexamples.bat
-lib/readme.txt
-platformio.ini
-buildexamples.bat
+.pio
+.vscode
