build testing GWG

--- a/.github/workflows/build_platformio.yml
+++ b/.github/workflows/build_platformio.yml
@@ -11,7 +11,8 @@ jobs:
           examples/simple-read-VS1/simple-read-VS1.ino,
           examples/simple-read-VS2/simple-read-VS2.ino,
           examples/simple-write-VS1/simple-write-VS1.ino,
-          examples/simple-write-VS2/simple-write-VS2.ino
+          examples/simple-write-VS2/simple-write-VS2.ino,
+          examples/simple-read-GWG/simple-read-GWG.ino
         ]
     steps:
       - uses: actions/checkout@v3
@@ -41,7 +42,8 @@ jobs:
           examples/simple-read-VS1/simple-read-VS1.ino,
           examples/simple-read-VS2/simple-read-VS2.ino,
           examples/simple-write-VS1/simple-write-VS1.ino,
-          examples/simple-write-VS2/simple-write-VS2.ino
+          examples/simple-write-VS2/simple-write-VS2.ino,
+          examples/simple-read-GWG/simple-read-GWG.ino
         ]
     steps:
       - uses: actions/checkout@v3
