--- a/.github/workflows/build_arduino_ide.yml
+++ b/.github/workflows/build_arduino_ide.yml
@@ -26,6 +26,7 @@ jobs:
             - examples/simple-read-VS2
             - examples/simple-write-VS1
             - examples/simple-write-VS2
+            - examples/simple-read-GWG
           libraries: |
             - name: VitoWiFi
               source-path: ./
@@ -53,6 +54,7 @@ jobs:
             - examples/simple-read-VS2
             - examples/simple-write-VS1
             - examples/simple-write-VS2
+            - examples/simple-read-GWG
           libraries: |
             - name: VitoWiFi
               source-path: ./
