--- a/.github/workflows/build_arduino_ide.yml
+++ b/.github/workflows/build_arduino_ide.yml
@@ -27,11 +27,7 @@ jobs:
             - examples/simple-write-VS1
             - examples/simple-write-VS2
             - examples/simple-read-GWG
-          libraries: |
-            - name: VitoWiFi
-              source-path: ./
-            - name: EspSoftwareSerial
-              source-url: https://github.com/plerup/espsoftwareserial.git
+            - examples/softwareserial
 
   build-for-esp32:
     runs-on: ubuntu-latest
@@ -55,8 +51,3 @@ jobs:
             - examples/simple-write-VS1
             - examples/simple-write-VS2
             - examples/simple-read-GWG
-          libraries: |
-            - name: VitoWiFi
-              source-path: ./
-            - name: EspSoftwareSerial
-              source-url: https://github.com/plerup/espsoftwareserial.git
