--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,10 @@ build_flags =
   -D VW_START_PAYLOAD_LENGTH=10
 extra_scripts = test_coverage.py
 build_type = debug
+test_testing_command =
+  valgrind
+  --leak-check=full
+  --show-leak-kinds=all
+  --track-origins=yes
+  --error-exitcode=1
+  ${platformio.build_dir}/${this.__env__}/program
