--- a/.github/workflows/cpplint.yml
+++ b/.github/workflows/cpplint.yml
@@ -1,10 +1,12 @@
-name: Cpplint
+name: cpplint
 
 on: [push, pull_request]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
@@ -13,6 +15,7 @@ jobs:
         python-version: '3.11'
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install cpplint
     - name: Linting
       run: |
