--- a/.github/workflows/test_platformio.yml
+++ b/.github/workflows/test_platformio.yml
@@ -6,18 +6,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    container: ghcr.io/bertmelis/pio-test-container
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install platformio
-          sudo apt-get install lcov
+      - uses: actions/checkout@v4
       - name: Test
         run: |
           pio test -e native -v
