--- a/.github/workflows/test_platformio.yml
+++ b/.github/workflows/test_platformio.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v4
       - name: Test
         run: |
-          pio test -e native -v
+          pio test -e native -vvv
