--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,6 @@ build_flags =
   -Wextra
   -Wpedantic
   -std=c++11
-  -pthread
 
 [env:native]
 platform = native
@@ -18,3 +17,10 @@ build_flags =
   -D VW_START_PAYLOAD_LENGTH=10
 extra_scripts = test_coverage.py
 build_type = debug
+test_testing_command =
+  valgrind
+  --leak-check=full
+  --show-leak-kinds=all
+  --track-origins=yes
+  --error-exitcode=1
+  ${platformio.build_dir}/${this.__env__}/program
